--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,6 +5,8 @@ $lightGreen: #7EC775;
 $cream: #fdfcf7;
 $charcoal: #585858;
 $smoke: #8E8E8E;
+$red: #FF6347;
+$yellow: #ffbe40;
 
 // Easing
 // -----------------------------------
